@@ -33,10 +33,11 @@ public class CampaignService {
     private final TransactionTemplate transactionTemplate;
 
     public CampaignService(CampaignRepository campaignRepository,
-                           ProductRepository productRepository,
-                           StockRepository stockRepository,
-                           ThreadPoolTaskScheduler scheduler,
-                           PlatformTransactionManager transactionManager) {
+        ProductRepository productRepository,
+        StockRepository stockRepository,
+        ThreadPoolTaskScheduler scheduler,
+        PlatformTransactionManager transactionManager
+    ) {
         this.campaignRepository = campaignRepository;
         this.productRepository = productRepository;
         this.stockRepository = stockRepository;
@@ -48,9 +49,21 @@ public class CampaignService {
         CreateProductRequest productRequest = request.product();
         Stock stock = stockRepository.save(new Stock(productRequest.totalQuantity()));
         Product product = productRepository.save(
-                new Product(productRequest.name(), productRequest.description(), productRequest.price(), stock));
+            new Product(
+                productRequest.name(),
+                productRequest.description(),
+                productRequest.price(),
+                stock
+            )
+        );
         Campaign campaign = campaignRepository.save(
-            new Campaign(request.startDate(), request.endDate(), request.goalQuantity(), member));
+            new Campaign(
+                request.startDate(),
+                request.endDate(),
+                request.goalQuantity(),
+                member
+            )
+        );
         product.addCampaign(campaign);
         scheduleCampaignDate(campaign.getId(), request.startDate(), request.endDate());
         return campaign.getId();
@@ -62,7 +75,7 @@ public class CampaignService {
         if (findProducts.isEmpty()) {
             throw new IllegalArgumentException("캠페인이 존재하지 않습니다.");
         }
-        Product findProduct = findProducts.get(0);
+        Product findProduct = findProducts.getFirst();
         Campaign findCampaign = findProduct.getCampaign();
         return new ReadCampaignResponse(
             campaignId,
@@ -73,8 +86,8 @@ public class CampaignService {
     }
 
     public void scheduleCampaignDate(Long campaignId,
-                                     LocalDateTime startDate,
-                                     LocalDateTime endDate) {
+        LocalDateTime startDate,
+        LocalDateTime endDate) {
         Runnable startCampaign = () -> transactionTemplate.execute(status -> {
             changeCampaingState(campaignId, CampaignState.IN_PROGRESS);
             return null;
@@ -97,10 +110,7 @@ public class CampaignService {
     public boolean isStarted(Long campaignId) {
         Campaign campaign = campaignRepository.findById(campaignId)
             .orElseThrow(() -> new IllegalArgumentException("캠페인이 존재하지 않습니다."));
-        if (campaign.getState().equals(CampaignState.IN_PROGRESS)) {
-            return true;
-        }
-        return false;
+        return campaign.getState().equals(CampaignState.IN_PROGRESS);
     }
 
     public List<ReadCampaignResponse> readAllCampaign() {
